--- a/Calculator/Base.lproj/LaunchScreen.storyboard
+++ b/Calculator/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +17,39 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="0Ng-No-pDg">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="RKr-NB-Iwq">
+                                <rect key="frame" x="-6" y="472" width="606" height="128"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="mJj-FM-jVq">
+                                <rect key="frame" x="20" y="28" width="560" height="188"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="yXR-6z-eA3">
+                                <rect key="frame" x="180" y="278" width="240" height="128"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yXR-6z-eA3" firstAttribute="top" secondItem="mJj-FM-jVq" secondAttribute="bottom" constant="62" id="1xy-a7-etA"/>
+                            <constraint firstAttribute="trailing" secondItem="RKr-NB-Iwq" secondAttribute="trailing" id="FNW-1y-auy"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="RKr-NB-Iwq" secondAttribute="bottom" id="Fw6-D1-tW2"/>
+                            <constraint firstItem="yXR-6z-eA3" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Itp-fs-Pdk"/>
+                            <constraint firstItem="mJj-FM-jVq" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="8" id="O3E-eD-ZsJ"/>
+                            <constraint firstAttribute="trailing" secondItem="mJj-FM-jVq" secondAttribute="trailing" constant="20" id="OIv-xV-ONL"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="0Ng-No-pDg" secondAttribute="bottom" id="OZ7-AT-3k1"/>
+                            <constraint firstItem="yXR-6z-eA3" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="160" id="QO5-gv-OAf"/>
+                            <constraint firstItem="mJj-FM-jVq" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="20" id="Ugo-IN-fyq"/>
+                            <constraint firstItem="yXR-6z-eA3" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="aen-Yw-sEF"/>
+                            <constraint firstItem="RKr-NB-Iwq" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="6" id="bfY-tR-GHj"/>
+                            <constraint firstItem="0Ng-No-pDg" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="c7e-Ua-VOe"/>
+                            <constraint firstItem="RKr-NB-Iwq" firstAttribute="top" secondItem="yXR-6z-eA3" secondAttribute="bottom" constant="66" id="i6Y-DI-ZGX"/>
+                            <constraint firstItem="0Ng-No-pDg" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="kDj-8a-Jv4"/>
+                            <constraint firstAttribute="trailing" secondItem="0Ng-No-pDg" secondAttribute="trailing" id="pXo-HQ-qdh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yXR-6z-eA3" secondAttribute="trailing" constant="160" id="tk7-6Q-Z3k"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +57,10 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
